fixed spacing issue with sticky navbar and projects page going over 100% vh. updated some styling

--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -6,7 +6,8 @@
     grid-template-rows: 1.25fr 1fr 1fr;
     position: sticky;
     top: 0;
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     background:
         linear-gradient(50deg, rgba(96, 58, 105, 0.8) 15%, rgba(40, 174, 170, 0.8) 80%);
     z-index: 99;
