--- a/src/sass/layouts/_portfolio.scss
+++ b/src/sass/layouts/_portfolio.scss
@@ -1,7 +1,6 @@
 .profile-page {
     display: flex;
     position: relative;
-    // background-color: blue;
 }
 
 .section {
@@ -9,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
     width: 100%;
     box-shadow: inset 0 0 1px 1px green;
 
