--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -1,13 +1,13 @@
 @use "../abstracts/" as *;
 
 .section-projects {
-    display: flex;
     flex-direction: column;
+    top: 0;
     width: 90%;
-
-    div {}
-
-    >div {
+    div {
+    }
+    
+    > div {
         width: 100%;
     }
 
@@ -15,7 +15,8 @@
         &-detail {
             display: grid;
             grid-template-columns: 500px 1fr;
-            padding: 0 2em;
+            padding: 2em;
+            min-height: 400px;
 
             .placeholder-text {
                 grid-column: 1/3;
@@ -24,7 +25,6 @@
             }
 
 
-            min-height: 400px;
 
             .placeholder-text {
                 font-size: $font-size-headers;
@@ -36,7 +36,7 @@
                 align-items: center;
                 position: relative;
                 width: 500px;
-                height: 400px;
+                height: 100%;
                 border-radius: 20px;
                 overflow: hidden;
 
@@ -90,7 +90,8 @@
                 }
 
                 .links {
-                    margin-top: 20px;
+                    display: flex;
+                    align-items: flex-end;
                     height: 50px;
                 }
 
