--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -20,8 +20,28 @@ body {
     color: white;
     font-family: $font-body;
     background-color: $color-background;
+    height: 100%;
 }
 
 .text-teal {
     color: teal;
 }
+
+/*----------------------------------------
+        CSS for ScrollBars
+-----------------------------------------*/
+::-webkit-scrollbar {
+    // width: 0;
+}
+                    
+::-webkit-scrollbar-track {
+    // border-radius: 10px;
+    // background-color: shidden;
+}
+                    
+::-webkit-scrollbar-thumb {
+    // border-radius: 10px;
+    // background-color: rgb(32, 119, 32);
+    // -webkit-box-shadow: inset 0 0 6px 3px rgba(0, 0, 0, 0.5); 
+}
+/*========== END SECTION ==========*/
